# RPIPICO-M2OSPORT-TFG

./: CMakeLists.txt  README.md  autobuild.sh  fileregen.sh  helloworld.elf  helloworld.elf.map  helloworld.uf2  indie_build.sh  libmake.sh  libmake2.sh  libmake3.sh  libmake4.sh  makeverbosel1.txt  makeverbosel2.txt  makeverboselbn.txt  makeverboseln.txt  makeverbosetrace.txt  old.txt  readme-md  readme.md  test.elf  test.elf.map
libs/dummy_lib/: CMakeLists.txt  dummy_lib.c  dummy_lib.h
old scripts/: autobuild.sh  libmake.sh  libmake3.sh
